# ClaudeCrew

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  wsgi.py
.claude/: settings.json
.claude/agents/: architect.md  builder.md  code-reviewer.md  debugger.md  test-engineer.md
.claude/commands/: build-app.md  feature.md  review-pr.md  review.md  ship.md  test.md
.claude/hooks/: format_python.sh  guard_bash.sh  session_start.sh
.claude/skills/flask-api/: SKILL.md
.claude/skills/git-pr-flow/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/workflows/: build-app.js
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
app/: __init__.py  account.py  auth.py  db.py  password_reset.py  security.py  stats.py  version_routes.py
docs/: PARALLEL-FEATURES.md  PLAN.md  WORKFLOW.md
scripts/: agent-dashboard.sh
tests/: conftest.py  test_account.py  test_auth.py  test_password_reset.py  test_stats.py  test_version.py
