[project]
name = "ensemble-auth-api"
version = "0.1.0"
description = "Flask Auth API demo for an ideal Claude Code agentic setup"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
